RESOLVED FIXED245826
WTFReportBacktrace fails to print backtrace and crashes on ASAN
https://bugs.webkit.org/show_bug.cgi?id=245826
Summary WTFReportBacktrace fails to print backtrace and crashes on ASAN
Kimmo Kinnunen
Reported 2022-09-29 04:58:44 PDT
WTFReportBacktrace fails to print backtrace and crashes on ASAN
Attachments
Radar WebKit Bug Importer
Comment 1 2022-09-29 04:58:56 PDT
Kimmo Kinnunen
Comment 2 2022-09-29 05:40:38 PDT
EWS
Comment 3 2022-10-05 03:08:40 PDT
Committed 255164@main (5b5a2dc989fa): <https://commits.webkit.org/255164@main> Reviewed commits have been landed. Closing PR #4830 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.