Source/WTF/wtf/StackTrace.h
@@ -27,6 +27,7 @@
 #pragma once
 
 #include <optional>
+#include <wtf/Span.h>
 #include <wtf/SystemFree.h>
 
 #if HAVE(BACKTRACE_SYMBOLS) || HAVE(BACKTRACE)
@@ -50,27 +51,42 @@ class PrintStream;
 class StackTrace {
     WTF_MAKE_FAST_ALLOCATED;
 public:
-    WTF_EXPORT_PRIVATE static std::unique_ptr<StackTrace> captureStackTrace(int maxFrames, int framesToSkip = 0);
+    WTF_EXPORT_PRIVATE NEVER_INLINE static std::unique_ptr<StackTrace> captureStackTrace(size_t maxFrames, size_t framesToSkip = 0);
 
-    // Borrowed stack trace.
-    StackTrace(void** stack, int size, const char* prefix = "")
-        : m_prefix(prefix)
-        , m_size(size)
-        , m_borrowedStack(stack)
-    { }
-
-    int size() const { return m_size; }
-    void* const * stack() const
+    Span<void* const> stack() const
     {
-        if (!m_capacity)
-            return m_borrowedStack;
-        return m_stack;
+        return Span<void* const> { m_stack + m_initialFrame, m_size };
+    }
+
+    void dump(PrintStream&) const;
+private:
+
+    StackTrace(size_t size, size_t initialFrame)
+        : m_size(size)
+        , m_initialFrame(initialFrame)
+    {
+    }
+
+    size_t m_size;
+    size_t m_initialFrame;
+    void* m_stack[1];
+};
+
+class StackTraceSymbolResolver {
+public:
+    StackTraceSymbolResolver(Span<void* const> stack)
+        : m_stack(stack)
+    {
+    }
+    StackTraceSymbolResolver(const StackTrace& stack)
+        : m_stack(stack.stack())
+    {
     }
 
     class DemangleEntry {
         WTF_MAKE_FAST_ALLOCATED;
     public:
-        friend class StackTrace;
+        friend class StackTraceSymbolResolver;
         const char* mangledName() const { return m_mangledName; }
         const char* demangledName() const { return m_demangledName.get(); }
 
@@ -86,14 +102,11 @@ public:
 
     WTF_EXPORT_PRIVATE static std::optional<DemangleEntry> demangle(void*);
 
-    WTF_EXPORT_PRIVATE void dump(PrintStream&, const char* indentString = nullptr) const;
-
     template<typename Functor>
     void forEach(Functor functor) const
     {
-        const auto* stack = this->stack();
 #if HAVE(BACKTRACE_SYMBOLS)
-        char** symbols = backtrace_symbols(stack, m_size);
+        char** symbols = backtrace_symbols(m_stack.data(), m_stack.size());
         if (!symbols)
             return;
 #elif OS(WINDOWS)
@@ -104,60 +117,57 @@ public:
         symbolInfo->SizeOfStruct = sizeof(SYMBOL_INFO);
         symbolInfo->MaxNameLen = MAX_SYM_NAME;
 #endif
-
-        for (int i = 0; i < m_size; ++i) {
-            const char* mangledName = nullptr;
-            const char* cxaDemangled = nullptr;
+        for (size_t i = 0; i < m_stack.size(); ++i) {
+            const char* name = nullptr;
+            auto demangled = demangle(m_stack[i]);
+            if (demangled)
+                name = demangled->demangledName() ? demangled->demangledName() : demangled->mangledName();
 #if HAVE(BACKTRACE_SYMBOLS)
-            mangledName = symbols[i];
+            if (!name)
+                name = symbols[i];
 #elif OS(WINDOWS)
-            if (DbgHelper::SymFromAddress(hProc, reinterpret_cast<DWORD64>(stack[i]), nullptr, symbolInfo))
-                mangledName = symbolInfo->Name;
+            if (!name && DbgHelper::SymFromAddress(hProc, reinterpret_cast<DWORD64>(m_stack[i]), nullptr, symbolInfo))
+                name = symbolInfo->Name;
 #endif
-            auto demangled = demangle(stack[i]);
-            if (demangled) {
-                mangledName = demangled->mangledName();
-                cxaDemangled = demangled->demangledName();
-            }
-            const int frameNumber = i + 1;
-            functor(frameNumber, stack[i], cxaDemangled ? cxaDemangled : mangledName);
+            functor(i + 1, m_stack[i], name);
         }
 
 #if HAVE(BACKTRACE_SYMBOLS)
         free(symbols);
 #endif
     }
-
 private:
-    inline static size_t instanceSize(int capacity);
+    Span<void* const> m_stack;
+};
 
-    // We can't default initialize the member since it's not supported by windows
-    StackTrace() : m_size(0) // NOLINT
+class StackTracePrinter {
+public:
+    StackTracePrinter(Span<void* const> stack, const char* prefix = "")
+        : m_stack(stack)
+        , m_prefix(prefix)
     {
     }
 
-    const char* m_prefix { nullptr };
+    StackTracePrinter(const StackTrace& stack, const char* prefix = "")
+        : m_stack(stack.stack())
+        , m_prefix(prefix)
+    {
+    }
 
-    // We structure the top fields this way because the underlying stack capture
-    // facility will capture from the top of the stack, and we'll need to skip the
-    // top 2 frame which is of no interest. Setting up the fields layout this way
-    // allows us to capture the stack in place and minimize space wastage.
-    union {
-        struct {
-            int m_size;
-            int m_capacity;
-        };
-        struct {
-            void* m_skippedFrame0;
-            void* m_skippedFrame1;
-        };
-    };
-    union {
-        void** m_borrowedStack;
-        void* m_stack[1];
-    };
+    WTF_EXPORT_PRIVATE void dump(PrintStream&) const;
+
+private:
+    const Span<void* const> m_stack;
+    const char* const m_prefix;
 };
+
+inline void StackTrace::dump(PrintStream& out) const
+{
+    StackTracePrinter { *this }.dump(out);
+}
 
 } // namespace WTF
 
 using WTF::StackTrace;
+using WTF::StackTraceSymbolResolver;
+using WTF::StackTracePrinter;
